--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         const modal = document.getElementById('shareModal');
         const linkInput = document.getElementById('shareLinkInput');
 
-        const videoUrl = `https://rashgawy13.github.io/Rashed-Media/${videoFilename}`;
+        const videoUrl = `https://yourusername.github.io/your-repo-name/videos/${videoFilename}`;
         linkInput.value = videoUrl;
 
         modal.style.display = 'flex';
