--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         // Generate a unique identifier for each video
         const uniqueId = generateUniqueId();
-        const videoUrl = `https://rashgawy13.github.io/Rashed-Media/videos/${videoFilename}?id=${uniqueId}`;
+        const videoUrl = `https://rashgawy13.github.io/videos/${videoFilename}?id=${uniqueId}`;
         linkInput.value = videoUrl;
 
         // Show the modal
