--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 
     <script>
         function redirectToHomepage() {
-            window.location.href = "/";
+            window.location.href = "https://rashgawy13.github.io/Rashed-Media/";
         }
     </script>
 </body>
