--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         const linkInput = document.getElementById('shareLinkInput');
         const copyBtn = document.getElementById('copyBtn');
 
-        const videoUrl = `https://rashgawy13.github.io/Rashed-Media/videos/${videoId}`; // Replace with your actual domain
+        const videoUrl = `https://rashgawy13.github.io/Rashed-Media/${videoId}`; // Replace with your actual domain
         linkInput.value = videoUrl;
 
         modal.style.display = 'flex';
